--- a/views/administracion/listas/listaCentroCostos.jade
+++ b/views/administracion/listas/listaCentroCostos.jade
@@ -36,7 +36,7 @@ html(lang='es')
         nav
           a
             form(action="verListaEmpresas"  method='POST')
-              input(type='hidden' value= usuario.IdUsuario  name="IdUsuario")
+              input(type='hidden' value= usuario.IdUsuario  name="IdUsuario") 
               button(type="submit" class="btnMenu") Empresas
           a 
             form(action="verListaFranquicias"  method='POST')
@@ -51,9 +51,9 @@ html(lang='es')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
           a 
-              form(action="verListaContacto"  method='POST')
-                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-                button(type="submit" class="btnMenu") Contactos
+            form(action="verListaContactos"  method='POST')
+              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+              button(type="submit" class="btnMenu") Contactos              
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
