--- a/views/Contactos/unosolo/verUnContacto.jade
+++ b/views/Contactos/unosolo/verUnContacto.jade
@@ -54,6 +54,14 @@ html(lang='es')
               form(action="verListaContactos"  method='POST')
                 input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
                 button(type="submit" class="btnMenu") Contactos
+          a 
+              form(action="verListaOficina"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Oficinas
+          a 
+              form(action="verListaPuesto"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Puestos
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
