--- a/views/Contactos/unosolo/verUnaOficina.jade
+++ b/views/Contactos/unosolo/verUnaOficina.jade
@@ -1,10 +1,10 @@
 doctype html
-head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    link(rel="stylesheet", href="/stylesheets/genericoListas.css")
-    //link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
-    title Empresas
+html(lang='es')
+  head
+      meta(charset='UTF-8')
+      title Oficinas
+      link(rel='stylesheet' href='/stylesheets/genericoUnoSolo.css')
+
   body
     header.header
       .container
@@ -71,47 +71,55 @@ head
   
         label(for='btn-menu') ✖️ 
 
-
-
-  #main-container
-    label(class="lblListaUnidades" ) Lista de Empresas
-    
-    br
-    br
-
-    form.col-12(action="reporteEmpresas"  method='POST' name="Id")
+.container2
+    form(action="guardarOficina" method='POST')
+      if tipoMensaje == 1 
+        label(class="ok") Datos guardados correctamente
+      else  
+        if tipoMensaje == 2
+          label(class="lblError") Algo salio mal, los datos no se guardaron
       input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-      button(type="submit" class="btnReporte" ) Generar reporte
-    if usuario.tipoUsuario == 1 || usuario.tipoUsuario == 2 
-      form.col-12(action="nuevaEmpresa"  method='POST' name="Id")
-        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-        input(type='hidden' value= 1   name="guardar")
-        button(type="submit" class="bntNuevoLista" ) Agregar Empresa
-
-    br
-    br
-
-    table
-      thead      
-        tr
-          //th Id
-          th Nombre        
-          th Status
-          th Accion               
-      tbody        
-      each e in listaEmpresas      
-        tr
-          //td= e.idEmpresa  
-          td= e.nombreEmpresa
-          if e.status == true         
-            td Activo     
-          else
-            td Inactivo
-          td
-            form.col-12(action="verEmpresa"  method='POST')
-              input(type='hidden' value= e.idEmpresa     name="IdEmpresa")
-              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-              button(type="submit" class="btnVerUnidad" ) Ver empresa  
-
+      input(type='hidden' value= oficina.IdOficina   name="IdOficina") 
+      h3 Informacion de Oficina
+      .row
+        .col-half
+          h4 Nombre Oficina
+            .input-group.input-group-icon
+              input(type="text", name = "nombreOficina", value = oficina.nombreOficina, placeholder="Nombre oficina")
+              .input-icon
+                i.fa.fa-user
+        .col-half
+          h4 Status
+          .input-group 
+            select(name = "status")
+              if oficina.status == true
+                option(class="opt" value = '1') Activo
+                if usuario.tipoUsuario == 1
+                  option(class="opt" value ='0') Inactivo
+              else 
+                option(class="opt" value = '0') Inactivo 
+                if usuario.tipoUsuario == 1
+                  option(class="opt" value = '1') Activo
+              
+                    
+      .row
         
+        .input-group
+          if usuario.tipoUsuario == 1 || agregar == 1
+            input(type="submit", value="Guardar" class="brnGuardar")
 
+.container3
+  .row 
+    .input-group
+      if usuario.tipoUsuario == 1 || usuario.tipoUsuario == 2
+        form(action="nuevaOficina" method='POST')    
+          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")   
+          input(type='hidden' value= 1   name="agregar")     
+          input(type="submit", value="Nuevo" class ="brnNuevo")
+
+.container3
+  .row
+    .input-group    
+      form(action="verListaOficina" method='POST')    
+        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
+        input(type="submit", value="Cancelar" class ="btnCancelar")          
