--- a/views/administracion/listas/listaContacto.jade
+++ b/views/administracion/listas/listaContacto.jade
@@ -53,9 +53,17 @@ head
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
           a 
-              form(action="verListaContacto"  method='POST')
+              form(action="verListaContactos"  method='POST')
                 input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
                 button(type="submit" class="btnMenu") Contactos
+          a 
+              form(action="verListaOficina"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Oficinas
+          a 
+              form(action="verListaPuesto"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Puestos
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
