--- a/views/Contactos/listas/listaContactos.jade
+++ b/views/Contactos/listas/listaContactos.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
   head
     meta(charset='UTF-8')
-    title Centros de Costo
+    title Contactos
     link(rel='stylesheet' href='/stylesheets/genericoListas.css')
   body
     header.header
