--- a/views/administracion/listas/listaCentroCostos.jade
+++ b/views/administracion/listas/listaCentroCostos.jade
@@ -51,17 +51,17 @@ html(lang='es')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
           a 
-              form(action="verListaContactos"  method='POST')
-                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-                button(type="submit" class="btnMenu") Contactos
+            form(action="verListaContactos"  method='POST')
+              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+              button(type="submit" class="btnMenu") Contactos  
           a 
-              form(action="verListaOficina"  method='POST')
-                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-                button(type="submit" class="btnMenu") Oficinas
+            form(action="verListaOficinas"  method='POST')
+              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+              button(type="submit" class="btnMenu") Oficinas    
           a 
-              form(action="verListaPuesto"  method='POST')
-                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-                button(type="submit" class="btnMenu") Puestos              
+            form(action="verListaPuestos"  method='POST')
+              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+              button(type="submit" class="btnMenu") Puestos                                               
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
