--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -57,7 +57,11 @@ html(lang='es')
           a 
             form(action="verListaOficinas"  method='POST')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-              button(type="submit" class="btnMenu") Oficinas                  
+              button(type="submit" class="btnMenu") Oficinas  
+          a 
+            form(action="verListaPuestos"  method='POST')
+              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+              button(type="submit" class="btnMenu") Puestos                              
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
